add_library(
        let
        tcp_client.h
        tcp_client.cpp
        tcp_server.h
        tcp_server.cpp
        tcp_conn.h
        tcp_conn.cpp
        acceptor.h
        acceptor.cpp
        connector.h
        connector.cpp
        event_loop_thread.h
        event_loop_thread.cpp
        event_loop.cpp
        event_loop.h
        logger.h
        logger.cpp
        utility.h
        utility.cpp
        buffer.h
        callback.h
        ip_addr.h
        ip_addr.cpp
        generic_conn_pool.h
        channel.h
        string_view.h
        worker.h
        worker.cpp
        noncopyable.h
)

target_link_libraries(let event event_pthreads pthread)