add_library(
        let
        tcp_server.h
        tcp_server.cpp
        acceptor.h
        acceptor.cpp
        event_loop.cpp
        event_loop.h
        event_loop_thread_pool.h
        event_loop_thread_pool.cpp
        tcp_connection.h
        tcp_connection.cpp
        buffer.h
        callback.h
        connector.h
        connector.cpp
        tcp_client.h
        tcp_client.cpp
        ip_addr.h
        ip_addr.cpp
        socket.h
        socket.cpp
        utility.h
        utility.cpp
        logger.h
        logger.cpp
        noncopyable.h
        callback.h
        threaded_executor.h
        threaded_executor.cpp
)

target_link_libraries(let event pthread)